--- a/meal-page.html
+++ b/meal-page.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style/lib/awesome/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i|Montserrat:700" rel="stylesheet">
     <link href="style/main.css" media="screen, projection" rel="stylesheet"/>
     <link href="style/media.css" media="screen, projection" rel="stylesheet"/>
-    <link rel="stylesheet" href="awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i|Montserrat:700" rel="stylesheet">
     <title>Menu-Item</title>
 </head>
 <body>
 <header class="site-header meal-style">
     <div class="logo">
-        <a href="#">
+        <a href="index.html">
             <img src="images/my-logo.png" alt="">Gratia
         </a>
     </div>
