--- a/menu-page.html
+++ b/menu-page.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style/lib/awesome/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i|Montserrat:700" rel="stylesheet">
     <link href="style/main.css" media="screen, projection" rel="stylesheet"/>
     <link href="style/media.css" media="screen, projection" rel="stylesheet"/>
-    <link rel="stylesheet" href="awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i|Montserrat:700" rel="stylesheet">
     <title>menu</title>
 </head>
 <body>
 <header class="site-header meal-style">
     <div class="logo">
-        <a href="#">
+        <a href="index.html">
             <img src="images/my-logo.png" alt="">Gratia
         </a>
     </div>
@@ -22,7 +22,7 @@
                 <a href="#">About</a>
             </li>
             <li>
-                <a href="menu-page.html" target="_blank">Menu</a>
+                <a href="menu-page.html">Menu</a>
             </li>
             <li>
                 <a href="#">Gallery</a>
@@ -40,42 +40,42 @@
     </header>
     <ul class="menu-list">
         <li>
-            <a href="meal-page.html" target="_blank">
+            <a href="meal-page.html">
                 <img src="images/menu-img/menu-item-one.png" alt="">
                 <h4>MAIN DISHES</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </a>
         </li>
         <li>
-            <a href="meal-page.html" target="_blank">
+            <a href="meal-page.html">
                 <img src="images/menu-img/menu-item-two.png" alt="">
                 <h4>SOUPS</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </a>
         </li>
         <li>
-            <a href="meal-page.html" target="_blank">
+            <a href="meal-page.html">
                 <img src="images/menu-img/menu-item-three.png" alt="">
                 <h4>HAMBURGERS</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </a>
         </li>
         <li>
-            <a href="meal-page.html" target="_blank">
+            <a href="meal-page.html">
                 <img src="images/menu-img/menu-item-four.png" alt="">
                 <h4>DESSERTS</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </a>
         </li>
         <li>
-            <a href="meal-page.html" target="_blank">
+            <a href="meal-page.html">
                 <img src="images/menu-img/menu-item-five.png" alt="">
                 <h4>BARBECUE</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </a>
         </li>
         <li>
-            <a href="meal-page.html" target="_blank">
+            <a href="meal-page.html">
                 <img src="images/menu-img/menu-item-six.png" alt="">
                 <h4>BARBECUE</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
