--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="lib/slick/slick-css/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="lib/slick/slick-css/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="js/lib/slick/slick-css/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="js/lib/slick/slick-css/slick-theme.css"/>
+    <link rel="stylesheet" href="style/lib/awesome/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i|Montserrat:700" rel="stylesheet">
     <link href="style/main.css" media="screen, projection" rel="stylesheet"/>
     <link href="style/media.css" media="screen, projection" rel="stylesheet"/>
-    <link rel="stylesheet" href="awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i|Montserrat:700" rel="stylesheet">
     <title>Title</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
                     <a href="#">About</a>
                 </li>
                 <li>
-                    <a href="menu-page.html" target="_blank">Menu</a>
+                    <a href="menu-page.html">Menu</a>
                 </li>
                 <li>
                     <a href="#">Gallery</a>
@@ -139,16 +139,7 @@
     </ul>
 </footer>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script type="text/javascript" src="lib/slick/slick-js/slick.min.js"></script>
-<script>
-    $(document).ready(function(){
-        $('.my-carousel').slick({
-
-    });
-    });
-
-
-</script>
-
+<script type="text/javascript" src="js/lib/slick/slick-js/slick.min.js"></script>
+<script type="text/javascript" src="js/lib/slick/slick.js"></script>
 </body>
 </html>
