--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav>
             <ul class="site-nav">
                 <li>
-                    <a href="#">About</a>
+                    <a href="index.html">About</a>
                 </li>
                 <li>
                     <a href="menu-page.html">Menu</a>
@@ -36,6 +36,7 @@
             </ul>
         </nav>
     </header>
+
     <div class="container">
         <div class="my-carousel">
             <div class="carousel-item"><img src="images/slider-img.png"></div>
@@ -117,6 +118,7 @@
         </li>
     </ul>
 </section>
+
 <footer class="site-foot">
     <h1>Gratia Restaurant</h1>
     <p class="copy">Copyright 2016. All rights reserved by symu</p>
