--- a/meal-page.html
+++ b/meal-page.html
@@ -19,7 +19,7 @@
     <nav>
         <ul class="site-nav">
             <li>
-                <a href="#">About</a>
+                <a href="index.html">About</a>
             </li>
             <li>
                 <a href="menu-page.html" target="_blank">Menu</a>
